--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openNAS",
-  "version": "0.0.1.DEV",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node app.js"
